// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextCell Truncation Logic should truncate html with multiple matching paragraphs and only show relevant paragraphs 1`] = `
<span
  class="ix_matching_paragraph px-1 [color:var(--color-theme-text-primary)]"
>
  ...thats part of the matching paragraph 
  <span
    class="ix_match bg-[#FFE29A] [color:var(--color-theme-text-primary)]"
  >
    Praesent sed molestie risus, vitae laoreet elit.
  </span>
</span>
`;

exports[`ContextCell Truncation Logic should truncate html with single matching paragraph and only show relevant paragraphs 1`] = `
<span
  class="ix_matching_paragraph px-1 [color:var(--color-theme-text-primary)]"
>
  ...cus dapibus euismod. 
  <span
    class="ix_match bg-[#FFE29A] [color:var(--color-theme-text-primary)]"
  >
     Praesent sed molestie risus, vitae laoreet elit.
  </span>
   Cras dapibus, neque a eleifend...
</span>
`;

exports[`ContextCell Truncation Logic should work when a matching paragraph has multiple match words 1`] = `
<span
  class="ix_matching_paragraph px-1 [color:var(--color-theme-text-primary)]"
>
  The quarterly report shows 
  <span
    class="ix_match bg-[#FFE29A] [color:var(--color-theme-text-primary)]"
  >
    Revenue: $1.2M
  </span>
  ,
  <span
    class="ix_match bg-[#FFE29A] [color:var(--color-theme-text-primary)]"
  >
    Expenses: $800K
  </span>
  ,and a net profit of 
  <span
    class="ix_match bg-[#FFE29A] [color:var(--color-theme-text-primary)]"
  >
    $400K
  </span>
   .
</span>
`;

exports[`ContextCell should not render script tags 1`] = `
<div
  class="pointer-events-auto cursor-pointer"
>
   
  <span
    class=""
  >
    Text 1
  </span>
   
</div>
`;

exports[`ContextCell should not render script tags when nested on valid tags 1`] = `
<span
  class=""
>
  Text 1
</span>
`;
